src/manifest/nginx-d-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.13
          name: nginx
          ports:
            - containerPort: 80
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 3
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: config
            mountPath: '/etc/nginx/conf.d/'
      volumes:
      - name: config
        configMap:
          name: nginx-configmap
