src/manifest/nginx-d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 15
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.13
          name: nginx
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 3
            initialDelaySeconds: 10
#          resources:
#            requests:
#              cpu: 100m
#              memory: 100Mi
#            limits:
#              cpu: 100m
#              memory: 100Mi
