src/manifest/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - image: nginx:1.12
      name: nginx
      ports:
        - containerPort: 80
